version 1.20 (2008/01/25):

    - new "none" padding method

    - added an optimization to make the new API a bit retrocompatible
      in some special cases
    
    - padding recognition is more robust

    - [API CHANGE] ->finish() is now required after decrypting, because
      the previous implementation contained a bug when decrypting data 
      in multiple calls to ->decrypt(): the module tried to strip
      padding at every call, thus removing wrong bytes in some cases.
      Added the 06-multi.t test and a warning for users who don't 
      call the ->finish() method.
      (thanks to Paul Kolano for bug report and test case)

version 1.17 (2007/10/29):

    - removed warnings on platforms with signed chars
      (untested)

version 1.16 (2006/12/20):
	
	- fixed compilation issue with GCC 2.95
	- test compatibility with Crypt::CBC 2.17
	- minor code cleanup

version 1.15 (2006/01/06):
	
	- fixed t/05-size.t (now skips if we don't have Devel::Size)

version 1.14 (2006/01/06):

    - fixed compilation on Solaris (thanks to Andre Schmidt for bug report)
    - fixed minor memory leaks
    - added t/05-size.t
    - changed version numbering format
    - minor changes and typo fixes in POD

version 1.1.3 (2005/12/27):

    - fixed typo in Makefile.PL
    - fixed pointer types in XS code

version 1.1.1 (2005/12/22):

    - minor bug fixes
    - fixed typo in POD
    - improved Makefile.PL for locating libgcrypt
    - added t/03-pod.t and t/04-podcoverage.t

version 1.1 (2005/10/10):
	
	- added finish() to handle partial blocks
	- added padding with null and standard methods
	- added compatibility test with Crypt::CBC

version 1.00 (2005/10/09):

	- new